--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   taskmanager:
     build:
-      context: ../../
-      dockerfile: installations/flink/flink.Dockerfile
+      context: ./
+      dockerfile: flink.Dockerfile
     container_name: taskmanager
     hostname: taskmanager
     depends_on:
@@ -17,8 +17,8 @@ services:
 
   jobmanager:
     build:
-      context: ../../
-      dockerfile: installations/flink/flink.Dockerfile
+      context: ./
+      dockerfile: flink.Dockerfile
     container_name: jobmanager
     hostname: jobmanager
     ports:
@@ -31,7 +31,8 @@ services:
         rest.address: jobmanager
         rest.port: 8082
     volumes:
-      - ../../src/pipeline/job.py:/opt/flink/usrcode/job.py
+      - ./src/pipeline/job.py:/opt/flink/usrcode/job.py
+      - ./src/pipeline/job2.py:/opt/flink/usrcode/job2.py
 
   zookeeper:
     image: wurstmeister/zookeeper:latest
@@ -50,6 +51,6 @@ services:
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "input-topic:1:1,output-topic:1:1"
+      KAFKA_CREATE_TOPICS: "rail_network:1:1,output-topic:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
