--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "rail_network:1:1,output-topic:1:1,rtti-schedule:1:1,rtti-ts:1:1,rtti-joined:1:1"
+      KAFKA_CREATE_TOPICS: "rail_network:1:1,output-topic:1:1,rtti-schedule:1:1,rtti-ts:1:1,rtti-joined:1:1,rtti-lsh-results:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     
